--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Russia travel</title>
+    <link rel="stylesheet" href="./pages/style.css">
 </head>
 <body>
-    
+    <div class="page">
+        <header class="header">
+            <div class="header__logo">
+
+            </div>
+            <div class="header__lang-link">
+
+            </div>
+        </header>
+        <section class="lead">
+            <h1 class="lead__title">Путешествия по России</h1>
+            <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+            <img class="lead__image">
+            <p class="lead__caption">ваша полка — верхняя</p>
+        </section>
+        <section class="intro">
+            <h2 class="intro__title">Чего мы там не видели?</h2>
+            <p class="intro_text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+            <p class="intro__list">Часовых поясов 11</p>
+            <p class="intro__list">Объектов природного наследия ЮНЕСКО 12</p>
+            <p class="intro__list">Объектов культурного наследия ЮНЕСКО 16</p>
+            <p class="intro__list">Природных заповедников 105</p>
+            <p class="intro__list">Аэропортов 241</p>
+        </section>
+        <section class="photo-grid">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+            <img class="photo-grid__item">
+        </section>
+        <section class="places">
+            <div class="place">
+                <h2 class="place__title">Куршская коса</h2>
+                <img class="place__image">
+                <div class="place__website">
+                    <a class="place__url-heading"></a>
+                    <a class="place__link"></a>
+                </div>
+                <p class="place__paragraph"></p>
+                <p class="place__paragraph"></p>
+            </div>
+            <div class="place">
+                <h2 class="place__title">Куршская коса</h2>
+                <img class="place__image">
+                <div class="place__website">
+                    <a class="place__url-heading"></a>
+                    <a class="place__link"></a>
+                </div>
+                <p class="place__paragraph"></p>
+                <p class="place__paragraph"></p>
+            </div>
+            <div class="place">
+                <h2 class="place__title">Куршская коса</h2>
+                <img class="place__image">
+                <div class="place__website">
+                    <a class="place__url-heading"></a>
+                    <a class="place__link"></a>
+                </div>
+                <p class="place__paragraph"></p>
+                <p class="place__paragraph"></p>
+            </div>
+            <div class="place">
+                <h2 class="place__title">Куршская коса</h2>
+                <img class="place__image">
+                <div class="place__website">
+                    <a class="place__url-heading"></a>
+                    <a class="place__link"></a>
+                </div>
+                <p class="place__paragraph"></p>
+                <p class="place__paragraph"></p>
+            </div>
+            <div class="place">
+                <h2 class="place__title">Куршская коса</h2>
+                <img class="place__image">
+                <div class="place__website">
+                    <a class="place__url-heading"></a>
+                    <a class="place__link"></a>
+                </div>
+                <p class="place__paragraph"></p>
+                <p class="place__paragraph"></p>
+            </div>
+        </section>
+        <section class="cover">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <div class="cover__overlay"></div>
+            <div class="cover__background"></div>
+        </section>
+        <footer class="footer">
+            <nav class="footer__links">
+                <a class="footer__link">Карты</a>
+                <a class="footer__link">Погода</a>
+                <a class="footer__link">Расписание</a>
+                <a class="footer__link">Календарь</a>
+                <a class="footer__link">Путешествия</a>
+            </nav>
+            <p class="footer__copyright">2021. Щегловатов Владимир</p>
+        </footer>
+    </div>    
 </body>
 </html>
