--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Russia travel</title>
-    <link rel="stylesheet" href="./pages/style.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
     <div class="page">
         <header class="header">
-            <div class="header__logo">
-
-            </div>
-            <div class="header__lang-link">
-
+            <img src="./images/__logo.svg" alt="Лого" class="logo" >            
+            <div class="header__lang-links">
+                <a class="header__lang-link">Ru</a>
+                <a class="header__lang-link">En</a>
             </div>
         </header>
         <section class="lead">
