--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-            <img class="lead__image">
+            <div class="lead__images">
+                <img src="images/kalegin-michail-179870-unsplash.svg" alt="Спальное место в поезде" class="lead__image">
+                <img src="./images/Group 4.svg" alt="Карта путешествия" class="lead__image-way">
+            </div>            
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
