--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Russia travel</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
     <div class="page">
         <header class="header">
-            <img src="./images/__logo.svg" alt="Лого" class="logo" >            
+            <img src="./images/header-logo.svg" alt="Лого" class="logo" >            
             <div class="header__lang-links">
                 <a class="header__lang-link">Ru</a>
                 <a class="header__lang-link">En</a>
@@ -20,7 +20,7 @@
             <h1 class="lead__title">Путешествия по России</h1>
             <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
             <div class="lead__images">
-                <img src="images/kalegin-michail-179870-unsplash.svg" alt="Спальное место в поезде" class="lead__image">
+                <img src="./images/lead-polka.jpg" alt="Спальное место в поезде" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </div>            
             
@@ -37,48 +37,48 @@
             </ul>
         </section>
         <section class="photo-grid">
-            <img src="./images/__item-01.svg" class="photo-grid__item">
-            <img src="./images/__item-02.svg" class="photo-grid__item">
-            <img src="./images/__item-03.svg" class="photo-grid__item">
-            <img src="./images/__item-04.svg" class="photo-grid__item">
-            <img src="./images/__item-05.svg" class="photo-grid__item">
-            <img src="./images/__item-06.svg" class="photo-grid__item">
-            <img src="./images/__item-07.svg" class="photo-grid__item">
-            <img src="./images/__item-08.svg" class="photo-grid__item">
-            <img src="./images/__item-09.svg" class="photo-grid__item">
-            <img src="./images/__item-10.svg" class="photo-grid__item">
-            <img src="./images/__item-11.svg" class="photo-grid__item">
-            <img src="./images/__item-12.svg" class="photo-grid__item">
+            <img src="./images/photo-grid-train.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-baikal.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item">
+            <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item">
         </section>
         <section class="places">
             <div class="place">
                 <h2 class="place__title">Куршская коса</h2>
-                <img src="./images/__kurshskaya kosa.svg" alt="Куршская коса" class="place__image">
+                <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link">park-kosa.ru</a>
+                    <a class="place__link" href="#">park-kosa.ru</a>
                 </div>
                 <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                 <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
             </div>
             <div class="place">
                 <h2 class="place__title">Кольский</h2>
-                <img src="./images/kolsky.svg" alt="Кольский" class="place__image">
+                <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link">National Geographic</a>
+                    <a class="place__link" href="#">National Geographic</a>
                 </div>
                 <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                     тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                <p class="place__paragraph" href="#">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                     в Мурманск.</p>
             </div>
             <div class="place">
                 <h2 class="place__title">Алтай</h2>
-                <img src="./images/altai.svg" alt="Алтай" class="place__image">
+                <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link">Facebook</a>
+                    <a class="place__link" href="#">Facebook</a>
                 </div>
                 <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                     В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -86,10 +86,10 @@
             </div>
             <div class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
-                <img src="./images/zimniy baikal.svg" class="place__image">
+                <img src="./images/place-winter-baikal.jpg" alt="Зимний байкал" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link">https://vk.com/baikalmile</a>
+                    <a class="place__link" href="#">https://vk.com/baikalmile</a>
                 </div>
                 <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                     в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -98,10 +98,10 @@
             </div>
             <div class="place">
                 <h2 class="place__title">Карелия</h2>
-                <img src="./images/kareliya.svg" class="place__image">
+                <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link">http://vodlozero.ru/</a>
+                    <a class="place__link" href="#">http://vodlozero.ru/</a>
                 </div>
                 <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                     В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
@@ -117,11 +117,11 @@
         </section>
         <footer class="footer">
             <nav class="footer__links">
-                <a class="footer__link">Карты</a>
-                <a class="footer__link">Погода</a>
-                <a class="footer__link">Расписание</a>
-                <a class="footer__link">Календарь</a>
-                <a class="footer__link">Путешествия</a>
+                <a href="#" class="footer__link">Карты</a>
+                <a href="#" class="footer__link">Погода</a>
+                <a href="#" class="footer__link">Расписание</a>
+                <a href="#" class="footer__link">Календарь</a>
+                <a href="#" class="footer__link">Путешествия</a>
             </nav>
             <p class="footer__copyright">2021. Щегловатов Владимир</p>
         </footer>
