--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
         <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
-            <p class="intro_text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+            <p class="intro_paragraph">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
                 <li class="intro__list-text">Часовых поясов 11</li>
                 <li class="intro__list-text">Объектов природного наследия ЮНЕСКО 12</li>
@@ -56,7 +56,7 @@
                 <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link" href="#">park-kosa.ru</a>
+                    <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
                 </div>
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -68,7 +68,7 @@
                 <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link" href="#">National Geographic</a>
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                 </div>
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -82,7 +82,7 @@
                 <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link" href="#">Facebook</a>
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                 </div>
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -95,7 +95,7 @@
                 <img src="./images/place-winter-baikal.jpg" alt="Зимний байкал" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link" href="#">https://vk.com/baikalmile</a>
+                    <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -109,7 +109,7 @@
                 <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__website">
                     <a class="place__url-heading">URL</a>
-                    <a class="place__link" href="#">http://vodlozero.ru/</a>
+                    <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
@@ -126,13 +126,13 @@
         </section>
         <footer class="footer">
             <nav class="footer__links">
-                <a href="#" class="footer__link">Карты</a>
-                <a href="#" class="footer__link">Погода</a>
-                <a href="#" class="footer__link">Расписание</a>
-                <a href="#" class="footer__link">Календарь</a>
-                <a href="#" class="footer__link">Путешествия</a>
+                <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+                <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+                <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+                <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+                <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
             </nav>
-            <p class="footer__copyright">2021. Щегловатов Владимир</p>
+            <p class="footer__copyright">&copy 2021. Щегловатов Владимир</p>
         </footer>
     </div>    
 </body>
